Add players basic funcionalities

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
+    <%= link_to 'Add player', new_player_path, class: "nav-link"%>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+   <%= link_to 'All players',players_path, class: "nav-link"%>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
