--- a/app/assets/stylesheets/rounds.scss
+++ b/app/assets/stylesheets/rounds.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the rounds controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.bet-color{
+  width: 50px;
+  height: 40px;
+  background-color:#E2E2E2;
+  border-radius: 10%;
+  margin-left: 10px;
+}
