--- a/app/views/rounds/table.html.erb
+++ b/app/views/rounds/table.html.erb
@@ -1,20 +1,8 @@
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-  </div>
-</div>
 <div class="card text-center" id="table">
-  <div class="card-header">
-    Table: Round
-  </div>
+  <h1 class="text-success mt-5"> Time remaining: <span class="timer">10m:0s</span></h1>
   <div class="card-body">
-    <h5 class="card-title"></h5>
-    <div class="row">
-      <h5 class="card-title text-success">Time Remaining: </h5>
-      <h5 class="carf-title timer"></h5>
-    </div>
+    <h5 class="card-title"><span class="round-result"></h5>
     <div class="spinner-border text-warning d-none" role="status">
       <span class="sr-only">Loading...</span>
     </div>
@@ -34,3 +22,7 @@
     <button class="btn btn-warning btn-lg" id="gambles" data-players="<%=@players.pluck(:id) %>"> Spin me! </button>
   </div>
 </div>
+<div class="container mt-3">
+<div class="card-columns infinity-rounds"></div>
+</div>
+<%= render 'rounds'%>
