Add round result to main page

--- a/app/views/rounds/table.html.erb
+++ b/app/views/rounds/table.html.erb
@@ -1,8 +1,11 @@
 
 <div class="card text-center" id="table">
-  <h1 class="text-success mt-5"> Time remaining: <span class="timer">10m:0s</span></h1>
+  <div class ="row mb-3 mt-3 ml-5">
+    <h1 class="text-success"> Time remaining: <span class="timer">10m:0s</span></h1>
+    <span class="card-title ml-3" id="round-title"></span>
+    <div class="round-result ml-3"></div>
+  </div>
   <div class="card-body">
-    <h5 class="card-title"><span class="round-result"></h5>
     <div class="spinner-border text-warning d-none" role="status">
       <span class="sr-only">Loading...</span>
     </div>
