--- a/app/assets/stylesheets/rounds.scss
+++ b/app/assets/stylesheets/rounds.scss
@@ -10,3 +10,15 @@
 .timer{
   margin-left: 10px;
 }
+.round-result{
+  width: 50px;
+  height: 50px;
+  background-color:#E2E2E2;
+  border-radius: 50%;
+}
+#round-title{
+  line-height: 50px;
+  vertical-align: center;
+  font-weight: 600;
+  font-size: 1.7em;
+}
