Add players dinamically

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,6 @@
    <%= link_to 'All players',players_path, class: "nav-link"%>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+   <%= link_to 'Home',root_path, class: "nav-link"%>
   </li>
 </ul>
