--- a/app/views/rounds/table.html.erb
+++ b/app/views/rounds/table.html.erb
@@ -10,16 +10,18 @@
       <span class="sr-only">Loading...</span>
     </div>
     <div class="row text-center pagination-centered" id="round">
-      <% @players.each do |player| %>
-        <div class = "col-md-2 player">
-          <h5 class="bet-amount">$<%= player.cash%></h5>
-          <div class="row">
-            <div class="col-md-8">
-              <%= link_to player.name, player_path(player), class: 'btn btn-outline-primary' %>
+      <% if @players %>
+        <% @players.each do |player| %>
+          <div class = "col-md-2 player">
+            <h5 class="bet-amount">$<%= player.cash%></h5>
+            <div class="row">
+              <div class="col-md-8">
+                <%= link_to player.name, player_path(player), class: 'btn btn-outline-primary' %>
+              </div>
+              <div class="bet-color" style="background-color: <%=player.gamble_color(@round.id)%>"></div>
             </div>
-            <div class="bet-color"></div>
           </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
     <div class="mt-3 mb-3">
