--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -8,32 +8,21 @@
     <%= link_to 'New Player', new_player_path, class: "btn btn-success" %>
   </div>
 </div>
-<br>
-<table class= "table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Cash</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="card-columns">
+<% @players.each do |player| %>
+  <div class="container">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title"><%=player.name%></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%=player.email%></h6>
+        <h5 class="card-title">$<%=player.cash%></h5>
+        <%= link_to 'Edit', edit_player_path(player), class: "btn btn-info"%>
+        <%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 
-  <tbody>
-    <% @players.each do |player| %>
-      <tr>
-        <td><%= player.name %></td>
-        <td><%= player.email %></td>
-        <td><%= player.cash %></td>
-        <td><%= link_to 'Show', player %></td>
-        <td><%= link_to 'Edit', edit_player_path(player) %></td>
-        <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
+      </div>
+    </div>
+  </div>
+  <% end %>
+  </div>
 
 </div>
