--- a/app/views/rounds/table.html.erb
+++ b/app/views/rounds/table.html.erb
@@ -24,9 +24,7 @@
         <% end %>
       <% end %>
     </div>
-    <div class="mt-3 mb-3">
-      <button class="btn btn-success" id="new-player" data-players= "<%=@round.players.count%>"><span class="add-player">+ player</span></button>
-    </div>
+    <div class="mt-3 mb-3"></div>
   </div>
 </div>
 <div class="container mt-3">
