--- a/app/assets/stylesheets/rounds.scss
+++ b/app/assets/stylesheets/rounds.scss
@@ -13,7 +13,7 @@
 .round-result{
   width: 50px;
   height: 50px;
-  background-color:#E2E2E2;
+  background-color:#FFFFFF;
   border-radius: 50%;
 }
 #round-title{
@@ -25,4 +25,11 @@
 .add-player{
   font-size: 1.7em;
   font-weight: 600;
+}
+.player{
+  background-color: #FFFFFF;
+  border: 1px solid #E2E2E2;
+  border-radius: 5%;
+  margin: 5px;
+  padding: 10px;
 }
