--- a/app/views/rounds/table.html.erb
+++ b/app/views/rounds/table.html.erb
@@ -1,30 +1,37 @@
-
-<div class="card text-center" id="table">
-  <div class ="row mb-3 mt-3 ml-5">
-    <h1 class="text-success"> Time remaining: <span class="timer"></span></h1>
-    <span class="card-title ml-3" id="round-title"></span>
-    <div class="round-result ml-3"></div>
-  </div>
-  <div class="card-body">
-    <div class="spinner-border text-warning d-none" role="status">
-      <span class="sr-only">Loading...</span>
+<div class="bg-light pt-3 pb-3">
+  <div class="container" id="table">
+    <h5 class="float-right"> <%= @weekly_weather.max_temperature %>°C</h5>
+    <div class="row">
+      <h2 class="pl-5"><i>Zelda Players</i></h2>
+      <div class= "row ml-1 mr-1">
+        <h3 class="text-success  ml-3 mr-3 timer">3m:0s</h3>
+        <span class="card-title ml-3" id="round-title"></span>
+        <div class="row ml-5 round-rulet d-none">
+          <h3>round result: </h3>
+          <div class="round-result ml-3"></div>
+        </div>
+      </div>
     </div>
-    <div class="row text-center pagination-centered" id="round" data-current-round="<%=@round.id%>">
+
+    <div class="row pl-5" id="round" data-current-round="<%=@round.id%>">
       <% if @players %>
         <% @players.each do |player| %>
-          <div class = "col-md-2 player">
-            <h5 class="bet-amount">$<%= player.cash%></h5>
-            <div class="row">
-              <div class="col-md-8">
-                <%= link_to player.name, player_path(player), class: 'btn btn-outline-primary' %>
+          <div class="player">
+            <div class="col-md-12">
+              <%= link_to player.name, player_path(player), class: 'card-link text-center' %>
+              <h5 class="bet-amount">cash: $<%= player.cash%></h5>
+              <h5 class="bet-amount">bet: $<%= player.cash%></h5>
+              <div class="row">
+                <h5 class="ml-3">color: </h5>
+                <div class="bet-color ml-3" style="background-color: <%=player.gamble_color(@round.id)%>"></div>
               </div>
-              <div class="bet-color" style="background-color: <%=player.gamble_color(@round.id)%>"></div>
             </div>
           </div>
         <% end %>
       <% end %>
     </div>
-    <div class="mt-3 mb-3"></div>
+      <div class="mt-3 mb-3"></div>
+    </div>
   </div>
 </div>
 <div class="container mt-3">
