Refact rounds root view

--- a/app/assets/stylesheets/rounds.scss
+++ b/app/assets/stylesheets/rounds.scss
@@ -33,3 +33,9 @@
   margin: 5px;
   padding: 10px;
 }
+.round-color{
+  width: 30px;
+  height: 30px;
+  background-color:#E2E2E2;
+  border-radius: 50%;
+}
