--- a/app/views/rounds/_round.html.erb
+++ b/app/views/rounds/_round.html.erb
@@ -1,6 +1,6 @@
 
   <div class="card">
-    <h5 class="card-header">Round: <%= round.id%></h5>
+    <h5 class="card-header">Round <%= round.id%></h5>
     <div class="card-body">
       <h5>Winners </h5>
       <p>
