Refact routes to it looks like a simulation

--- a/app/assets/stylesheets/rounds.scss
+++ b/app/assets/stylesheets/rounds.scss
@@ -33,6 +33,13 @@
   margin: 5px;
   padding: 10px;
 }
+.winner{
+  background-color: #FFFFFF;
+  border: 1px solid #5cb85c;
+  border-radius: 5%;
+  margin: 5px;
+  padding: 10px;
+}
 .round-color{
   width: 30px;
   height: 30px;
