--- a/app/views/rounds/_rounds.html.erb
+++ b/app/views/rounds/_rounds.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-            <p><div class="ml-3 mr-3 round-color"style="background-color:<%= round.color_hex%>"></div></p>
+            <p><div class="ml-3 mr-3 round-color"style="background-color:<%= round.color_hex(round.color)%>"></div></p>
             <h5 class="text-dark">Round <%= round.id%></h5>
           </div>
         </div>
