--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <ul class="nav justify-content-center">
   <li class="nav-item">
-   <%= link_to 'Home',root_path, class: "nav-link"%>
+   <%= link_to 'Home',root_path, class: "nav-link text-dark font-weight-bold"%>
   </li>
   <li class="nav-item">
-   <%= link_to 'All players',players_path, class: "nav-link"%>
+   <%= link_to 'All players',players_path, class: "nav-link text-dark font-weight-bold"%>
   </li>
 </ul>
