--- a/app/views/players/_add_player.html.erb
+++ b/app/views/players/_add_player.html.erb
@@ -6,7 +6,7 @@
         <div class="bet-color ml-3" style="background-color: <%=player.gamble_color(@round.id)%>"></div>
       </div>
       <h5 class="text-dark pt-3 cash">cash: $<%= player.cash%></h5>
-      <h5 class="text-dark bet-amount">bet: $0</h5>
+      <h5 class="text-dark bet-amount">bet: $<%=player.bet(@round.id)%></h5>
       <h5 class="text-dark prize">prize: $<%= player.prize(@round.id)%></h5>
     </div>
   </div>
